updated signup page, added event handlers

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,7 @@
   <script>   document.addEventListener('DOMContentLoaded', function() {
     var elems = document.querySelectorAll('select');
     var instances = M.FormSelect.init(elems);
+    var instance = M.Tabs.init(el);
   });
 </script>
 </body>
